ver 0.22 (not yet released)
* protocol
  - "findadd"/"searchadd"/"searchaddpl" support the "sort" and
    "window" parameters
  - add command "readpicture" to download embedded pictures
  - command "moveoutput" moves an output between partitions
  - show partition name in "status" response
* tags
  - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
* input
  - curl: support "charset" parameter in URI fragment
  - ffmpeg: allow partial reads
* archive
  - iso9660: support seeking
* playlist
  - cue: integrate contents in database
* decoder
  - mad: remove option "gapless", always do gapless
  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag
* playlist
  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
  - dsd: add integer-only DSD to PCM converter
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
* lower the real-time priority from 50 to 40
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.19 (2020/01/17)
* configuration
  - allow overriding top-level settings in includes
* output
  - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
* fix build failure with clang 10
* fix build failure with Android NDK r20

ver 0.21.18 (2019/12/24)
* protocol
  - work around Mac OS X bug in the ISO 8601 parser
* output
  - alsa: fix hang bug with ALSA "null" outputs
* storage
  - curl: fix crash bug
* drop support for CURL versions older than 7.32.0
* reduce unnecessary CPU wakeups

ver 0.21.17 (2019/12/16)
* protocol
  - relax the ISO 8601 parser: allow omitting field separators, the
    time of day and the "Z" suffix
* archive
  - zzip: improve error reporting
* outputs
  - jack: mark ports as terminal