@@ -4,6 +4,7 @@ ver 0.22 (not yet released)
     "window" parameters
   - add command "readpicture" to download embedded pictures
   - command "moveoutput" moves an output between partitions
+  - command "delpartition" deletes a partition
   - show partition name in "status" response
 * tags
   - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
